samples/_failures_safe/1761272871_fd69dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3756de7.c: In function ‘main’:
./samples/SAFE/__tmp_d3756de7.c:154:41: error: expected ‘)’ at end of input
  154 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_d3756de7.c:154:21: error: too few arguments to function ‘print_matrix’
  154 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_d3756de7.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_d3756de7.c:154:21: error: expected declaration or statement at end of input
  154 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_d3756de7.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3756de7.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3756de7.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3756de7.c:154:21: error: expected declaration or statement at end of input
